...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOH-Je-8iH" userLabel="Like Button">
                                                    <rect key="frame" x="335" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton">
                                                        <bool key="isElement" value="NO"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="42" id="Aaf-Hq-sn9"/>
                                                        <constraint firstAttribute="height" constant="42" id="q8B-kv-dcO"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="L1K-0M-nDe" id="9S4-Ru-XG7"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iLV-vg-E9z" userLabel="Back Button">
                                <rect key="frame" x="9" y="8" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="L1K-0M-nDe" eventType="touchUpInside" id="3Ui-RN-r4a"/>
                                </connections>
                            </button>
...
                                    <constraint firstAttribute="height" constant="60" id="fYC-f0-AVs"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8bB-Or-3eq" userLabel="Log In button">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="TOq-9g-8Tz"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <backgroundConfiguration key="background"/>
...
                                <rect key="frame" x="0.0" y="103" width="393" height="4"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="rWM-ns-lI1"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstAttribute="bottom" secondItem="VZT-fM-TnS" secondAttribute="bottom" id="06U-m5-47H"/>
                            <constraint firstItem="6k3-Y1-5Ln" firstAttribute="leading" secondItem="rWM-ns-lI1" secondAttribute="leading" id="7W1-vP-2Eh"/>
                            <constraint firstItem="VZT-fM-TnS" firstAttribute="leading" secondItem="1qY-cS-kHJ" secondAttribute="leading" id="ASE-DE-eeb"/>
                            <constraint firstAttribute="trailing" secondItem="VZT-fM-TnS" secondAttribute="trailing" id="BQ3-wj-JTq"/>
                            <constraint firstItem="6k3-Y1-5Ln" firstAttribute="top" secondItem="rWM-ns-lI1" secondAttribute="top" id="p5T-fz-IIF"/>
...
